# sakamichibot

./: .env  .gitignore  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml
.github/workflow/: dockerCI.yml
.github/workflows/: docker-image.yml
go-cqhttp/: Dockerfile
src/plugins/hxzxhelper/: __init__.py  config.py  data_source.py  model.py
src/plugins/hxzxhelper/lib/: __init__.py  blog.py  mail.py  twitter.py  utils.py
src/plugins/sakamichiquiz/: __init__.py  config.py  data_source.py  model.py
